# Curacel_Claims_QA_Service

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  ask.json  ask2.json  conftest.py  demo_ocr_modes.py  docker-compose.yml  extract.json  extract2.json  extract_out.json  extract_pdf.json  extract_png.json  pyproject.toml  requirements.txt  setup_test_images.py  test_service.py
.github/workflows/: ci.yml
configs/: logging.yaml  settings.yaml
monitoring/: healthcheck.py  prometheus_metrics.py
src/api/: main.py
src/api/routes/: ask.py  extract.py
src/core/: config.py  exceptions.py  logging_config.py
src/services/: extraction_service.py  ocr_service.py  qa_service.py  storage_service.py
src/utils/: helpers.py  validators.py
test_documents/: README.md
tests/: conftest.py  test_ask.py  test_extract.py
